fix: spacing issue

--- a/src/components/storyblok/content-blok/content-blok.module.sass
+++ b/src/components/storyblok/content-blok/content-blok.module.sass
@@ -26,7 +26,7 @@
     align-items: center
   &Caption
     font-family: var(--font-bradford), 'Bradford', serif
-    padding: var(--spacing-sides)
+    padding: var(--spacing-sides) 0
     &_Top
       padding-top: 0
     &_Bottom
